# buckley

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  go.mod  go.sum  zed-settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/pr-descriptions/: odv-release-goofs.md
.github/workflows/: ci.yml  codeql.yml  docker-images.yml  docs.yml  release.yml
apps/browserd/: Cargo.toml  build.rs
apps/browserd/src/: main.rs
apps/browserd/src/engine/: mod.rs  servo.rs  stub.rs
apps/browserd/tests/fixtures/: simple.html
apps/desktop/: package-lock.json  package.json
cmd/buckley/: acp.go  acp_loop.go  acp_modes.go  acp_prompt.go  (+104 more)
completions/: buckley.bash  buckley.fish  buckley.zsh
docs/: ACP.md  ACP_API.md  ACP_DEPLOYMENT.md  ACP_SECURITY_AUDIT.md  ACP_TOOL_POLICY.md  CLI.md  CONFIGURATION.md  DIFF_ABRIDGING.md  ERRORS.md  EXPERIMENTATION.md  EXPERIMENTS.md  MISSION_CONTROL.md  ORCHESTRATION.md  README.md  RELEASE.md  SKILLS.md  TOOLS.md  index.md  package-lock.json  package.json  ralph-control-example.yaml
scripts/: build-ui.sh  migrate-repo.sh  preflight.sh  smoke-helm-kind.sh  smoke-plan-execute.sh  smoke-serve.sh  test.sh
templates/: AGENTS.example.md  config.example.yaml
tests/: one_shot_commit_test.go  smoke_test.go
web/: README.md  buf.gen.yaml  eslint.config.js  index.html  package.json  vite.config.ts
(+1588 files in other folders)
